revenuecat-2022-12-1/v3.0/Attribution/facebook-ads.md
---
title: "Facebook Ads"
slug: "facebook-ads"
excerpt: "Integrate Purchases SDK with Facebook Ads for precise revenue tracking"
hidden: false
metadata: 
  title: "Facebook Ads in-app purchase attribution | RevenueCat"
  description: "With our Facebook Ads integration, you can accurately track subscriptions generated from Facebook Ad campaigns, allowing you to know precisely how much revenue your campaigns generate. And more!"
  image: 
    0: "https://files.readme.io/9a32bac-Reddit__E.jpg"
    1: "Reddit – E.jpg"
    2: 1200
    3: 630
    4: "#fbabaf"
createdAt: {}
updatedAt: "2020-05-11T16:05:45.135Z"
---
With our Facebook Ads integration you can:
* Accurately track subscriptions generated from Facebook Ad campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial starts, trial conversions, and renewals directly from RevenueCat to Facebook Ads Manager, allowing for accurate tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.
[block:api-header]
{
  "title": "1. Install Facebook SDK"
}
[/block]
Before RevenueCat can integrate with Facebook, your app must be running the Facebook SDK. Refer to the [Facebook developer documentation](https://developers.facebook.com/docs/) for the latest installation instructions.
[block:api-header]
{
  "title": "2. Send attribution data to RevenueCat"
}
[/block]
Use the `addAttributionData` method to pass attribution information from Facebook to RevenueCat. With Facebook, you just need to pass an empty dictionary into this method, since everything is collected automatically by the *Purchases* SDK.
[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\n\n...\n\nfunc application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplicationLaunchOptionsKey: Any]?) -> Bool {\n    \n    Purchases.configure(withAPIKey: \"public_sdk_key\", appUserID: \"my_app_user_id\")\n    \n    Purchases.addAttributionData([:], from: .facebook)\n}",
      "language": "swift"
    },
    {
      "code": "#import <AdSupport/AdSupport.h>\n  \n...\n\n- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {\n  // Override point for customization after application launch.\n  \n  [RCPurchases configureWithAPIKey:@\"public_sdk_key\" appUserID:@\"my_app_user_id\"];\n  \n  [RCPurchases addAttributionData:@{} fromNetwork:RCAttributionNetworkFacebook];\n  \t\n  return YES;\n}\n",
      "language": "objectivec"
    },
    {
      "code": "Purchases.addAttributionData({}, Purchases.ATTRIBUTION_NETWORKS.FACEBOOK);",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]
## Import AdSupport Framework (iOS only)
On iOS, (and cross-platform SDKs) you must import the AdSupport framework to properly capture attribution data.

To enable the AdSupport framework:

1. In your Xcode project, select your project's target.
2. Select the **General** tab for your target.
3. Expand the **Linked Frameworks and Libraries** section.
4. Click **+** to add a framework.
5. Select **AdSupport.framework**.

Before submitting your app for review, ensure your app complies with IDFA usage guidelines.
[block:callout]
{
  "type": "danger",
  "title": "Remove Facebook SDK Purchase Tracking",
  "body": "Make sure to remove all client side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Facebook SDK directly can lead to double counting of revenue in Facebook Ads Manager.\n\nYou can disable automatic In-App Purchase event logging from the Facebook SDK or from your Facebook app dashboard. Go to the iOS card under Settings > Platform > Log In-App Events Automatically > No\n\nTo continue to track install and usage events in Facebook, call the Facebook SDK activateApp method after configuration."
}
[/block]

[block:api-header]
{
  "title": "3. Send RevenueCat events into Facebook Ads Manager"
}
[/block]
After you've set up the *Purchase* SDK to send attribution data to RevenueCat, you can "turn on" the integration from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'Facebook' from the integrations menu.
2. Add your Facebook App ID for production events (and optionally an App ID for sandbox events).
3. Add the Facebook Client Token for your app (and for the sandbox App ID if included). You can find your Client Token in the Facebook dashboard under your App > Settings > Advanced > Client Token. You may need to click the 'Reset' button if there's no Client Token visible.
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/ee032ae-app.revenuecat.com_apps_8aa30a50_integrations_amplitude_1.png",
        "app.revenuecat.com_apps_8aa30a50_integrations_amplitude_(1).png",
        1411,
        2254,
        "#f8f8f8"
      ],
      "caption": "Facebook Ads configuration screen"
    }
  ]
}
[/block]
## Event Names
RevenueCat uses the following 'Standard' Facebook event names. Using 'Standard' events is recommended by Facebook for optimizing advertising campaigns and audiences.
[block:parameters]
{
  "data": {
    "h-0": "RevenueCat Event",
    "h-1": "Facebook Event",
    "0-0": "Trial Started",
    "1-0": "Trial Converted",
    "2-0": "Initial Purchase",
    "3-0": "Renewal",
    "4-0": "Non-Renewing Purchase",
    "4-1": "Purchase",
    "3-1": "Subscribe",
    "2-1": "Subscribe",
    "1-1": "Subscribe",
    "0-1": "StartTrial"
  },
  "cols": 2,
  "rows": 5
}
[/block]

[block:api-header]
{
  "title": "4. View Events in Facebook"
}
[/block]
Once events are delivered to Facebook, they can be used across Analytics, Ads Manager, and Audiences.
[block:callout]
{
  "type": "info",
  "body": "Note that there could be up to a 24 hour delay from when events are sent to when they are shown in the Facebook Analytics dashboard.",
  "title": "Facebook event delay"
}
[/block]
## Analytics
The events sent from RevenueCat will appear throughout Facebook Analytics as 'Standard' event types. Any events sent with revenue attached will be counted toward the 'Revenue' number in Facebook. This includes trial conversions and renewals that occur when the app isn't active.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/368b624-Screen_Shot_2019-07-09_at_10.13.27_PM.png",
        "Screen Shot 2019-07-09 at 10.13.27 PM.png",
        1278,
        490,
        "#eef1f2"
      ],
      "caption": "Revenue is sent directly into Facebook Analytics"
    }
  ]
}
[/block]
## Ads Manager
Within Facebook Ads Manager, you can customize the display columns to include subscription specific metrics. The 'Subscriptions' and 'Trials Started' values will be updated by the 'Subscribe' and 'StartTrial' events sent by RevenueCat, respectively. 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/c056928-Screen_Shot_2019-07-09_at_10.22.48_PM.png",
        "Screen Shot 2019-07-09 at 10.22.48 PM.png",
        528,
        842,
        "#e9e8eb"
      ]
    }
  ]
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/618d096-Screen_Shot_2019-07-09_at_10.25.19_PM.png",
        "Screen Shot 2019-07-09 at 10.25.19 PM.png",
        1386,
        752,
        "#f6f4f4"
      ]
    }
  ]
}
[/block]
By tracking the subscription revenue attributed to your Facebook campaigns you can quickly spot your most effective campaigns.

## Audiences
Facebook allows you to create custom audiences based off of events. This means you can create an audience of subscribers, and even create a "Lookalike" audience for better ad targeting.

To create a custom audience off of subscribers:

1. Create a Custom Audience and select 'App activity' as the source.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/3db1fcb-Screen_Shot_2019-07-09_at_10.30.09_PM.png",
        "Screen Shot 2019-07-09 at 10.30.09 PM.png",
        1156,
        1042,
        "#f6f4f5"
      ]
    }
  ]
}
[/block]
2. Choose an event, such as 'Subscribe' to create your audience off of.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/c756726-Screen_Shot_2019-07-09_at_10.32.24_PM.png",
        "Screen Shot 2019-07-09 at 10.32.24 PM.png",
        1134,
        1092,
        "#f9f8f8"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "body": "You should start seeing events from RevenueCat appear in Facebook Ads Manager.",
  "title": "You've done it!"
}
[/block]