revenuecat-2022-12-1/v3.1/Attribution/facebook-ads.md
---
title: "Facebook Ads"
slug: "facebook-ads"
excerpt: "Integrate Purchases SDK with Facebook Ads for precise revenue tracking"
hidden: false
metadata: 
  title: "Facebook Ads in-app purchase attribution – RevenueCat"
  description: "With our Facebook Ads integration, you can accurately track subscriptions generated from Facebook Ad campaigns, allowing you to know precisely how much revenue your campaigns generate. And more!"
  image: 
    0: "https://files.readme.io/9a32bac-Reddit__E.jpg"
    1: "Reddit – E.jpg"
    2: 1200
    3: 630
    4: "#fbabaf"
createdAt: {}
updatedAt: "2021-06-10T23:53:58.533Z"
---
With our Facebook Ads integration you can:
* Accurately track subscriptions generated from Facebook Ad campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial starts, trial conversions, and renewals directly from RevenueCat to Facebook Ads Manager, allowing for accurate tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.

# 1. Install Facebook SDK

Before RevenueCat can integrate with Facebook, your app must be running the Facebook SDK. Refer to the [Facebook developer documentation](https://developers.facebook.com/docs/) for the latest installation instructions.

# 2. Send device data to RevenueCat

The Facebook integration requires some device-specific data. RevenueCat will only send events into Facebook Ads Manager if the below [Subscriber Attributes](doc:subscriber-attributes) keys have been set for the device.
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "h-2": "Required",
    "0-0": "`$idfa`",
    "1-0": "`$gpsAdId`",
    "2-0": "`$fbAnonId`",
    "3-0": "`$androidId`",
    "0-2": "✅ (iOS only)",
    "1-2": "✅ (Android only)",
    "2-2": "✅ (iOS only)",
    "3-2": "✅ (Android only)",
    "5-2": "❌ (optional)",
    "5-0": "`$ip`",
    "0-1": "iOS [advertising identifier](https://developer.apple.com/documentation/adsupport/asidentifiermanager/1614151-advertisingidentifier) UUID",
    "1-1": "Google [advertising identifier](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info)",
    "2-1": "",
    "5-1": "The IP address of the device",
    "3-1": "Android [device identifier](https://developer.android.com/reference/android/provider/Settings.Secure#ANDROID_ID)",
    "6-0": "`$email`",
    "6-1": "The email address of the user",
    "6-2": "❌ (optional)",
    "4-0": "`$idfv`",
    "4-1": "iOS [vender identifier](https://developer.apple.com/documentation/uikit/uidevice/1620059-identifierforvendor) UUID",
    "4-2": "❌ (optional)",
    "7-0": "`$phoneNumber`",
    "7-1": "The phone number of the user",
    "7-2": "❌ (optional)"
  },
  "cols": 3,
  "rows": 8
}
[/block]
These properties can be set manually, like any other [Subscriber Attributes](doc:subscriber-attributes), or through the helper methods to `collectDeviceIdentifiers()` and `setFbAnonymousId()`.

[block:callout]
{
  "type": "danger",
  "title": "Device identifiers with iOS App Tracking Transparency (iOS 14.5+)",
  "body": "If you are requesting the App Tracking permission through ATT to access the IDFA, you can call `.collectDeviceIdentifiers()` *again* if the customer accepts the permission to update the `$idfa` attribute in RevenueCat."
}
[/block]

[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\n\n// ...\nPurchases.configure(withAPIKey: \"public_sdk_key\")\n// ...\n\n// Automatically collect the $idfa, $idfv, and $ip values\nPurchases.shared.collectDeviceIdentifiers() \n\n// REQUIRED: Set the Facebook anonymous Id\nPurchases.shared.setFBAnonymousID(FBSDKCoreKit.AppEvents.anonymousID)\n\n// Optionally set additional user data\nPurchases.shared.setEmail(\"test@example.com\")\nPurchases.shared.setPhoneNumber(\"+16505551234\")",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "//..\nPurchases.configure(this, \"public_sdk_key\")\n//..\n  \n// Automatically collect the $gpsAdId, $androidId, and $ip values\nPurchases.sharedInstance.collectDeviceIdentifiers()\n\n// Optionally set additional user data\nPurchases.sharedInstance.setEmail(\"test@example.com\")\nPurchases.sharedInstance.setPhoneNumber(\"+16505551234\")",
      "language": "kotlin"
    },
    {
      "code": "// NOTE: Facebook has officially ended support for their React Native SDK. You can read more about this here: https://developers.facebook.com/blog/post/2021/01/19/introducing-facebook-platform-sdk-version-9/\n\n// NOTE: You can find a community-supported alternative for the SDK here: https://github.com/facebookarchive/react-native-fbsdk\n\n// The following docs are left in place for reference\n\nimport FBSDK from \"react-native-fbsdk\"\n\n//...\nPurchases.setDebugLogsEnabled(true);\nPurchases.setup(\"public_sdk_key\");\n//...\n\n// Automatically collect the $idfa, $idfv, and $ip values\nPurchases.collectDeviceIdentifiers();\n\n// REQUIRED: Set the Facebook anonymous Id\nconst anonymousId = await FBSDK.AppEventsLogger.getAnonymousID();\nPurchases.setFBAnonymousID(anonymousId);\n\n// Optionally set additional user data\nPurchases.setEmail(\"test@example.com\");\nPurchases.setPhoneNumber(\"+16505551234\");",
      "language": "javascript",
      "name": "React Native"
    }
  ]
}
[/block]
You should make sure to set attributes after the *Purchases SDK* is configured, and before the first purchase occurs. It's safe to set this multiple times, as only the new/updated values will be sent to RevenueCat.
[block:callout]
{
  "type": "info",
  "title": "Import AdSupport Framework (iOS)",
  "body": "The AdSupport framework is required to access the IDFA parameter on iOS. Don't forget to import this into your project."
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/caf9cda-Screen_Shot_2020-09-14_at_7.09.36_PM.png",
        "Screen Shot 2020-09-14 at 7.09.36 PM.png",
        649,
        155,
        "#2b292b"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "title": "Remove Facebook SDK Purchase Tracking",
  "body": "Make sure to remove all client side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Facebook SDK directly can lead to double counting of revenue in Facebook Ads Manager.\n\nYou can disable automatic In-App Purchase event logging from the Facebook SDK or from your Facebook app dashboard. Go to the iOS/Android card under Settings > Platform > Log In-App Events Automatically > No\n\nTo continue to track install and usage events in Facebook, follow the steps in the next section."
}
[/block]
## Track Install and Usage Events

As noted above, you'll need to disable all client side tracking of revenue to prevent double counting of revenue in Facebook Ads Manager. To continue tracking install and usage events, you'll need to call Facebook's 'activate app' event after configuration:
[block:code]
{
  "codes": [
    {
      "code": "// disable automatic tracking\nFBSDKCoreKit.Settings.isAutoLogAppEventsEnabled = false\n\n// optional: call activateApp\nFBSDKCoreKit.AppEvents.activateApp()",
      "language": "swift"
    }
  ]
}
[/block]
You can see Facebook's App Events Reference [here](https://developers.facebook.com/docs/app-events/reference).

# 3. Send RevenueCat events into Facebook Ads Manager

After you've set up the *Purchase* SDK to send attribution data to RevenueCat, you can "turn on" the integration from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'Facebook' from the integrations menu.
2. Add your Facebook App ID for production events (and optionally an App ID for sandbox events).
3. Add the Facebook Client Token for your app (and for the sandbox App ID if included). You can find your Client Token in the Facebook dashboard under your App > Settings > Advanced > Client Token. You may need to click the 'Reset' button if there's no Client Token visible.
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/ee032ae-app.revenuecat.com_apps_8aa30a50_integrations_amplitude_1.png",
        "app.revenuecat.com_apps_8aa30a50_integrations_amplitude_(1).png",
        1411,
        2254,
        "#f8f8f8"
      ],
      "caption": "Facebook Ads configuration screen"
    }
  ]
}
[/block]
## Event Names
RevenueCat allows you to choose from different 'Standard' Facebook event names. Using 'Standard' events is recommended by Facebook for optimizing advertising campaigns and audiences.
[block:parameters]
{
  "data": {
    "h-0": "RevenueCat Event",
    "h-1": "Recommended Facebook Event",
    "0-0": "Trial Started",
    "1-0": "Trial Converted",
    "2-0": "Initial Purchase",
    "3-0": "Renewal",
    "4-0": "Non-Renewing Purchase",
    "4-1": "Purchase",
    "3-1": "Subscribe",
    "2-1": "Subscribe",
    "1-1": "Subscribe",
    "0-1": "StartTrial"
  },
  "cols": 2,
  "rows": 5
}
[/block]
# 4. Testing the Facebook Ads Manager integration

You can test the Facebook integration end-to-end before going live. It's recommended that you test the integration is working properly for new users, and any existing users that may update their app to a new version.

## Add a sandbox App Id and sandbox Client token in the RevenueCat dashboard
Before you test the integration, make sure you have a Facebook App Id and Client Token set in the "Sandbox" fields in RevenueCat. This is required if you want the integration to trigger for sandbox purchases.

## Make a sandbox purchase with a new user
Simulate a new user installing your app, and go through your app flow to complete a sandbox purchase.

## Check that the required device data is collected
Navigate the the [Customer View](doc:customers) for the test user that just made a purchase. Make sure that all of the required data from step 1 above is listed as attributes for the user.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/4a0a252-Screenshot_at_Sep_17_12-07-34.png",
        "Screenshot at Sep 17 12-07-34.png",
        361,
        650,
        "#f7f1f1"
      ]
    }
  ]
}
[/block]
## Check that the Facebook event delivered successfully
While still on the Customer View, click into the test purchase event in the [Customer History](doc:customer-history) and make sure that the Facebook integration event exists and was delivered successfully. 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/3a9477e-Screen_Shot_2020-09-14_at_9.30.55_PM.png",
        "Screen Shot 2020-09-14 at 9.30.55 PM.png",
        699,
        223,
        "#f7f1f1"
      ]
    }
  ]
}
[/block]
# 5. View Events in Facebook

Once events are delivered to Facebook, they can be used across Analytics, Ads Manager, and Audiences.
[block:callout]
{
  "type": "info",
  "body": "Note that there could be up to a 24 hour delay from when events are sent to when they are shown in the Facebook Analytics dashboard.",
  "title": "Facebook event delay"
}
[/block]
## Analytics
The events sent from RevenueCat will appear throughout Facebook Analytics as 'Standard' event types. Any events sent with revenue attached will be counted toward the 'Revenue' number in Facebook. This includes trial conversions and renewals that occur when the app isn't active.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/368b624-Screen_Shot_2019-07-09_at_10.13.27_PM.png",
        "Screen Shot 2019-07-09 at 10.13.27 PM.png",
        1278,
        490,
        "#eef1f2"
      ],
      "caption": "Revenue is sent directly into Facebook Analytics"
    }
  ]
}
[/block]
## Ads Manager
Within Facebook Ads Manager, you can customize the display columns to include subscription specific metrics. The 'Subscriptions' and 'Trials Started' values will be updated by the 'Subscribe' and 'StartTrial' events sent by RevenueCat, respectively. 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/c056928-Screen_Shot_2019-07-09_at_10.22.48_PM.png",
        "Screen Shot 2019-07-09 at 10.22.48 PM.png",
        528,
        842,
        "#e9e8eb"
      ]
    }
  ]
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/618d096-Screen_Shot_2019-07-09_at_10.25.19_PM.png",
        "Screen Shot 2019-07-09 at 10.25.19 PM.png",
        1386,
        752,
        "#f6f4f4"
      ]
    }
  ]
}
[/block]
By tracking the subscription revenue attributed to your Facebook campaigns you can quickly spot your most effective campaigns.

## Audiences
Facebook allows you to create custom audiences based off of events. This means you can create an audience of subscribers, and even create a "Lookalike" audience for better ad targeting.

To create a custom audience off of subscribers:

1. Create a Custom Audience and select 'App activity' as the source.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/3db1fcb-Screen_Shot_2019-07-09_at_10.30.09_PM.png",
        "Screen Shot 2019-07-09 at 10.30.09 PM.png",
        1156,
        1042,
        "#f6f4f5"
      ]
    }
  ]
}
[/block]
2. Choose an event, such as 'Subscribe' to create your audience off of.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/c756726-Screen_Shot_2019-07-09_at_10.32.24_PM.png",
        "Screen Shot 2019-07-09 at 10.32.24 PM.png",
        1134,
        1092,
        "#f9f8f8"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "body": "You should start seeing events from RevenueCat appear in Facebook Ads Manager.",
  "title": "You've done it!"
}
[/block]